# aiogram_pmk_bot

./: .gitignore  main.py  pyproject.toml  test.py
Documents/: ПМК_потоки
callbacks/: admin_panel.py  find_performer.py  my_order.py  new_order.py  payment.py  profile.py  schedule.py  support.py
data/Сегодня 23  Февраля 2024 года (Пятница)/: info.txt
keyboards/: builders.py  inline.py
middlewares/: album.py
utils/: __database.py  database.py  old_database.py  old_parser.py  parser.py  sender.py  states.py
utils/db/: admin_manager.py  main.py  order_manager.py  payment_service.py  schedule_manager.py  test.py  user_service.py
