[tool.poetry]
name = "aiogram-pmk-bot"
version = "0.1.0"
description = ""
authors = ["Alexander <cmetanin2006@gmail.com>"]
readme = "README.md"
packages = [{include = "aiogram_pmk_bot"}]  # Укажи папку с кодом
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fake-useragent = ">=2.0.3,<3.0.0"
bs4 = ">=0.0.2,<0.0.3"
lxml = ">=5.3.1,<6.0.0"
requests = ">=2.32.3,<3.0.0"
aiogram = ">=3.18.0,<4.0.0"
asyncpg = ">=0.30.0,<0.31.0"
dotenv = ">=0.9.9,<0.10.0"
aiocache = "^0.12.3"
aioredis = "^2.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
